--- a/LaunchScreen.xib
+++ b/LaunchScreen.xib
@@ -13,35 +13,32 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BC Logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="kSN-0Y-odg">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BC Logo" translatesAutoresizingMaskIntoConstraints="NO" id="kSN-0Y-odg">
                     <rect key="frame" x="169" y="79" width="143" height="141"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="kSN-0Y-odg" secondAttribute="height" multiplier="143:141" id="9gZ-Na-KVa"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (c) 2016 kloudrac softwares Pvt. Ltd." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nTL-68-ORI">
-                    <rect key="frame" x="20" y="404" width="441" height="56"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="nTL-68-ORI" secondAttribute="height" multiplier="63:8" id="SFe-TI-VkX"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <rect key="frame" x="20" y="442" width="441" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kSN-0Y-odg" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.298" id="fbW-u9-G8s"/>
-                <constraint firstItem="nTL-68-ORI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="n70-pk-kMY"/>
+                <constraint firstItem="nTL-68-ORI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="n70-pk-kMY"/>
                 <constraint firstItem="nTL-68-ORI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="nb3-Zu-JMf"/>
                 <constraint firstItem="kSN-0Y-odg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1/3" constant="70" id="r4j-QJ-CWn"/>
                 <constraint firstItem="kSN-0Y-odg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="vMb-IF-7aD"/>
                 <constraint firstAttribute="bottom" secondItem="nTL-68-ORI" secondAttribute="bottom" constant="20" id="z74-Ph-ppM"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="1298" y="370"/>
         </view>
     </objects>
     <resources>
-        <image name="BC Logo-2" width="800" height="800"/>
+        <image name="BC Logo" width="800" height="800"/>
     </resources>
 </document>
