--- a/Main.storyboard
+++ b/Main.storyboard
@@ -409,7 +409,7 @@
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cxo-u1-ygc">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" red="0.56674598350000005" green="1" blue="0.99802518389999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -884,6 +884,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="32" y="112" width="294" height="21"/>
+                                </variation>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6Xk-vo-Qkj">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -899,7 +902,8 @@
                                         <exclude reference="Et6-09-tkQ"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="32" y="138" width="294" height="118"/>
                                     <mask key="constraints">
                                         <include reference="Et6-09-tkQ"/>
                                     </mask>
@@ -945,7 +949,8 @@
                                         <exclude reference="WAf-aX-pAl"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="32" y="66" width="294" height="30"/>
                                     <mask key="constraints">
                                         <include reference="WAf-aX-pAl"/>
                                     </mask>
@@ -956,6 +961,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="32" y="40" width="294" height="21"/>
+                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.76729019752142791" green="0.79194117293326494" blue="0.8435354158307693" alpha="1" colorSpace="calibratedRGB"/>
@@ -1050,7 +1058,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R5o-XM-2lZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8512.5" y="-3360.75"/>
+            <point key="canvasLocation" x="7896" y="-3598.5"/>
+        </scene>
+        <!--Help View Controller-->
+        <scene sceneID="1Zj-VF-lGK">
+            <objects>
+                <viewController id="5yF-m6-K3W" customClass="HelpViewController" customModule="eShopKart" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="phg-pr-zuz"/>
+                        <viewControllerLayoutGuide type="bottom" id="FUT-SF-TMX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xT4-IM-Utf">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGa-eh-ygD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8685" y="-3602.25"/>
         </scene>
         <!--Category Item ListVC-->
         <scene sceneID="f9i-3b-YID">
@@ -1571,27 +1596,6 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xg5-KS-CQ1">
-                                                    <rect key="frame" x="-25" y="-30" width="97" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="47" id="HdO-c7-MEX"/>
-                                                        <constraint firstAttribute="height" constant="30" id="dBW-Fi-FwA"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                    <variation key="default">
-                                                        <mask key="constraints">
-                                                            <exclude reference="HdO-c7-MEX"/>
-                                                            <exclude reference="dBW-Fi-FwA"/>
-                                                        </mask>
-                                                    </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
-                                                        <mask key="constraints">
-                                                            <include reference="HdO-c7-MEX"/>
-                                                            <include reference="dBW-Fi-FwA"/>
-                                                        </mask>
-                                                    </variation>
-                                                </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cs9-eY-MAT">
                                                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                     <constraints>
@@ -1614,6 +1618,27 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xg5-KS-CQ1">
+                                                    <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="47" id="HdO-c7-MEX"/>
+                                                        <constraint firstAttribute="height" constant="30" id="dBW-Fi-FwA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="HdO-c7-MEX"/>
+                                                            <exclude reference="dBW-Fi-FwA"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                        <mask key="constraints">
+                                                            <include reference="HdO-c7-MEX"/>
+                                                            <include reference="dBW-Fi-FwA"/>
+                                                        </mask>
+                                                    </variation>
+                                                </textField>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Xg5-KS-CQ1" secondAttribute="bottom" constant="8" id="B6a-zn-OgE"/>
@@ -1639,8 +1664,8 @@
                                                     <exclude reference="GId-Zy-Lip"/>
                                                     <exclude reference="oZR-zr-8YQ"/>
                                                     <exclude reference="mJc-nP-lm9"/>
-                                                    <exclude reference="Xg5-KS-CQ1"/>
                                                     <exclude reference="Cs9-eY-MAT"/>
+                                                    <exclude reference="Xg5-KS-CQ1"/>
                                                 </mask>
                                                 <mask key="constraints">
                                                     <exclude reference="B6a-zn-OgE"/>
@@ -1665,8 +1690,8 @@
                                                     <include reference="GId-Zy-Lip"/>
                                                     <include reference="oZR-zr-8YQ"/>
                                                     <include reference="mJc-nP-lm9"/>
-                                                    <include reference="Xg5-KS-CQ1"/>
                                                     <include reference="Cs9-eY-MAT"/>
+                                                    <include reference="Xg5-KS-CQ1"/>
                                                 </mask>
                                                 <mask key="constraints">
                                                     <include reference="B6a-zn-OgE"/>
@@ -1741,6 +1766,7 @@
                                                 </textView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="v5p-8a-sRF" secondAttribute="bottom" constant="9" id="1lo-Q6-vW0"/>
                                                 <constraint firstItem="jz4-cP-FTD" firstAttribute="width" secondItem="gTM-G1-kon" secondAttribute="width" multiplier="0.586" id="Oq2-0b-5ij"/>
                                                 <constraint firstItem="v5p-8a-sRF" firstAttribute="top" secondItem="jz4-cP-FTD" secondAttribute="bottom" constant="7" id="adi-Tv-Thc"/>
                                                 <constraint firstItem="v5p-8a-sRF" firstAttribute="width" secondItem="gTM-G1-kon" secondAttribute="width" multiplier="0.749" id="dU6-BC-HZ5"/>
@@ -1754,12 +1780,13 @@
                                                     <exclude reference="v5p-8a-sRF"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="Oq2-0b-5ij"/>
-                                                    <exclude reference="kVB-Zg-hPv"/>
-                                                    <exclude reference="l1y-o8-PKH"/>
+                                                    <exclude reference="1lo-Q6-vW0"/>
                                                     <exclude reference="adi-Tv-Thc"/>
                                                     <exclude reference="dU6-BC-HZ5"/>
                                                     <exclude reference="hpS-qx-qIe"/>
+                                                    <exclude reference="Oq2-0b-5ij"/>
+                                                    <exclude reference="kVB-Zg-hPv"/>
+                                                    <exclude reference="l1y-o8-PKH"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=compact">
@@ -1768,12 +1795,13 @@
                                                     <include reference="v5p-8a-sRF"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="Oq2-0b-5ij"/>
-                                                    <include reference="kVB-Zg-hPv"/>
-                                                    <include reference="l1y-o8-PKH"/>
+                                                    <include reference="1lo-Q6-vW0"/>
                                                     <include reference="adi-Tv-Thc"/>
                                                     <include reference="dU6-BC-HZ5"/>
                                                     <include reference="hpS-qx-qIe"/>
+                                                    <include reference="Oq2-0b-5ij"/>
+                                                    <include reference="kVB-Zg-hPv"/>
+                                                    <include reference="l1y-o8-PKH"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -2095,7 +2123,7 @@
         <image name="BC Logo" width="800" height="800"/>
         <image name="Delete" width="20" height="20"/>
         <image name="cross_icon" width="15" height="16"/>
-        <image name="mobImg" width="800" height="800"/>
+        <image name="mobImg" width="65" height="65"/>
         <image name="upperAngularIcon2" width="128" height="128"/>
     </resources>
 </document>
