changes in detail vc

--- a/Main.storyboard
+++ b/Main.storyboard
@@ -538,7 +538,8 @@
                                                             <exclude reference="Dc5-QP-uam"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="131" y="16" width="57" height="9"/>
                                                         <mask key="constraints">
                                                             <include reference="Dc5-QP-uam"/>
                                                         </mask>
@@ -557,7 +558,8 @@
                                                             <exclude reference="bcA-LY-aZ6"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="131" y="33" width="44" height="17"/>
                                                         <mask key="constraints">
                                                             <include reference="bcA-LY-aZ6"/>
                                                         </mask>
@@ -576,7 +578,8 @@
                                                             <exclude reference="ESL-zO-k8h"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="190" y="33" width="98" height="17"/>
                                                         <mask key="constraints">
                                                             <include reference="ESL-zO-k8h"/>
                                                         </mask>
@@ -595,7 +598,8 @@
                                                             <exclude reference="5so-g6-ctd"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="131" y="53" width="123" height="44"/>
                                                         <mask key="constraints">
                                                             <include reference="5so-g6-ctd"/>
                                                         </mask>
@@ -614,7 +618,8 @@
                                                             <exclude reference="L0m-8P-aPZ"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="265" y="53" width="179" height="44"/>
                                                         <mask key="constraints">
                                                             <include reference="L0m-8P-aPZ"/>
                                                         </mask>
@@ -671,7 +676,8 @@
                                                             <exclude reference="vbs-ls-fv0"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="202" y="16" width="22" height="26"/>
                                                         <mask key="constraints">
                                                             <include reference="eTK-1R-Y4r"/>
                                                             <include reference="vbs-ls-fv0"/>
@@ -1069,6 +1075,7 @@
                         <viewControllerLayoutGuide type="bottom" id="FUT-SF-TMX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xT4-IM-Utf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -1549,7 +1556,8 @@
                                                             <exclude reference="J0v-m6-1Ib"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="35" y="13" width="170" height="19"/>
                                                         <mask key="constraints">
                                                             <include reference="J0v-m6-1Ib"/>
                                                         </mask>
@@ -1780,28 +1788,29 @@
                                                     <exclude reference="v5p-8a-sRF"/>
                                                 </mask>
                                                 <mask key="constraints">
+                                                    <exclude reference="Oq2-0b-5ij"/>
+                                                    <exclude reference="kVB-Zg-hPv"/>
+                                                    <exclude reference="l1y-o8-PKH"/>
                                                     <exclude reference="1lo-Q6-vW0"/>
                                                     <exclude reference="adi-Tv-Thc"/>
                                                     <exclude reference="dU6-BC-HZ5"/>
                                                     <exclude reference="hpS-qx-qIe"/>
-                                                    <exclude reference="Oq2-0b-5ij"/>
-                                                    <exclude reference="kVB-Zg-hPv"/>
-                                                    <exclude reference="l1y-o8-PKH"/>
                                                 </mask>
                                             </variation>
-                                            <variation key="heightClass=regular-widthClass=compact">
+                                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES">
+                                                <rect key="frame" x="0.0" y="0.0" width="400" height="237"/>
                                                 <mask key="subviews">
                                                     <include reference="jz4-cP-FTD"/>
                                                     <include reference="v5p-8a-sRF"/>
                                                 </mask>
                                                 <mask key="constraints">
+                                                    <include reference="Oq2-0b-5ij"/>
+                                                    <include reference="kVB-Zg-hPv"/>
+                                                    <include reference="l1y-o8-PKH"/>
                                                     <include reference="1lo-Q6-vW0"/>
                                                     <include reference="adi-Tv-Thc"/>
                                                     <include reference="dU6-BC-HZ5"/>
                                                     <include reference="hpS-qx-qIe"/>
-                                                    <include reference="Oq2-0b-5ij"/>
-                                                    <include reference="kVB-Zg-hPv"/>
-                                                    <include reference="l1y-o8-PKH"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
